# jxwxmk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DOCKER_FIX_GUIDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  GEMINI.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  config.json  docker-compose.dev.yml  docker-compose.yml  fix_docker.sh  nginx.conf  test_structure.sh  verify_structure.sh
src/: Cargo.toml  Dockerfile  README.md  config.json  lib.rs  main.rs  schema.sql
src/assets/: README.md
src/backend/: Cargo.toml  Dockerfile  README.md  main.rs
src/backend/config/: config.rs
src/backend/handlers/: health.rs  mod.rs  websocket.rs
src/backend/migrations/: 0001_initial_schema.sql
src/backend/models/: game.rs  item.rs  mod.rs  player.rs  world.rs
src/backend/services/: mod.rs  player_service.rs
src/backend/src/: main.rs
src/backend/utils/: vector.rs
src/client/: README.md  camera.ts  connection.ts  game.ts  index.html  index.ts  input.ts  main.js  main.ts  net.ts  package-lock.json  package.json  render.ts  renderer.ts  styles.css  tsconfig.json  types.ts  ui.ts  webpack.config.js  websocket.ts  world.ts
src/client/core/: README.md  network.ts  state.ts
src/client/data/: README.md  achievements.ts  recipes.ts
src/client/game/: README.md
src/client/input/: README.md  input_manager.ts  keyboard.ts  manager.ts  mouse.ts  state.ts  touch.ts
src/client/modules/: README.md  camera.ts  input.ts  renderer.ts  ui.ts
src/client/net/: README.md  protocol.ts  socket.ts  ws.ts
src/client/render/: README.md  camera.ts  renderer.ts
src/client/rendering/: README.md  camera.ts  canvas.ts  visuals.ts
src/client/src/: game.ts  index.html  index.ts  input.ts  net.ts  protocol.ts  renderer.ts  ui.ts
src/client/state/: README.md  inventory.ts  player.ts  quests.ts  types.ts  world.ts
src/client/types/: README.md  index.ts
src/client/ui/: README.md  achievements.ts  crafting.ts  hotbar.ts  hud.ts  inventory.ts  login.ts  manager.ts  menu.ts  notifications.ts  profile.ts  quests.ts  screens.ts  ui_helpers.ts  ui_manager.ts  ui_render.ts
src/client/utils/: README.md  time.ts
src/config/: Cargo.toml  README.md  defaults.rs  loader.rs  mod.rs
src/config/files/: README.md  achievements.rs  balance.rs  biomes.rs  crafting.rs  economy.rs  mod.rs  quests.rs  server.rs  settlements.rs  spawning.rs  survival.rs  world.rs
src/config/src/: lib.rs
src/crates/: README.md
src/crates/assets/: Cargo.toml  README.md
src/crates/config/: Cargo.toml  README.md
src/crates/game/: Cargo.toml  README.md
src/crates/integration_tests/: Cargo.toml
src/crates/net/: Cargo.toml  README.md
src/crates/persistence/: Cargo.toml  README.md
src/crates/protocol/: README.md
src/crates/systems/: Cargo.toml  README.md
src/crates/world/: Cargo.toml  README.md
src/db/: README.md  models.rs  schema.sql  seeds.sql
src/db/migrations/: 0001_initial_schema.sql  001_initial.up.sql  README.md
src/frontend/: Dockerfile  README.md  index.html  main.ts  nginx.conf  package.json  tsconfig.json  vite.config.ts  webpack.config.js
src/frontend/game/: Game.ts
src/frontend/public/: index.html
src/frontend/services/: WebSocketService.ts
src/frontend/src/: main.ts
src/frontend/utils/: MathUtils.ts  Vector2.ts
src/game/: Cargo.toml  README.md  achievements.rs  config.rs  engine.rs  mod.rs  quests.rs  spawning_and_ai.rs  state.rs  systems_ai.rs  systems_barriers.rs  systems_crafting.rs  systems_interaction.rs  systems_survival.rs  world_state.rs
src/game/engine/: README.md  broadcast.rs  handlers.rs  handlers_input.rs  handlers_session.rs  helpers.rs  logic.rs  messages.rs  mod.rs  streaming.rs  tick.rs
src/game/entities/: README.md  barrier.rs  item.rs  mob.rs  mod.rs  npc.rs  player.rs  resource.rs  structure.rs
src/game/events/: README.md  input.rs  mod.rs  requests.rs
src/game/src/: lib.rs
src/game/systems/: README.md  achievements.rs  barriers.rs  combat.rs  crafting.rs  death.rs  interaction.rs  mod.rs  quests.rs  survival.rs
src/game/world/: README.md  chunk.rs  coords.rs  mod.rs  settlement.rs
src/net/: Cargo.toml  README.md
src/net/src/: lib.rs
src/ops/: Dockerfile  README.md  docker-compose.yml
src/ops/compose/: README.md
src/ops/docker/: README.md
src/persistence/: Cargo.toml  README.md
src/persistence/migrations/: 20260128000000_init.sql
src/persistence/src/: lib.rs
src/protocol/: Cargo.toml  README.md  client.rs  server.rs  types.rs
src/protocol/src/: lib.rs
src/runtime/: Dockerfile  Dockerfile.quick  Dockerfile.test  README.md  docker-compose.test.yml  entrypoint.sh
src/runtime/compose/: README.md  docker-compose.build.yml  docker-compose.image.yml  docker-compose.rootless.yml  docker-compose.test.yml  docker-compose.yml
src/runtime/migrations/: README.md
src/server/: Cargo.toml  Dockerfile  README.md  config.rs  database.rs  db.rs  handlers.rs  http.rs  main.rs  mod.rs  net.rs  persistence.rs  protocol.rs  rate_limit.rs  session.rs  static_assets.rs  static_content.rs  world.rs  ws.rs
src/server/assets/: Cargo.toml  README.md
src/server/config/: Cargo.toml  README.md  loader.rs  mod.rs
src/server/crates/: README.md
src/server/game/: Cargo.toml  README.md  engine.rs  entities.rs  messages.rs  mod.rs  world.rs
src/server/jxwxmk-server/: Cargo.toml  README.md
src/server/net/: Cargo.toml  README.md  http.rs  mod.rs  ws.rs
src/server/persistence/: Cargo.toml  README.md  mod.rs
src/server/protocol/: Cargo.toml  README.md  messages.rs
src/server/src/: README.md  config.rs  database.rs  db.rs  handlers.rs  lib.rs  main.rs  network.rs  protocol.rs  simulation.rs  systems.rs  world.rs
src/server/static/: README.md  index.html
src/server/systems/: Cargo.toml  README.md
src/server/tests/: README.md  db_init.rs  (+1 more)
src/shared/: README.md
src/src/: main.rs
src/static/: README.md  app.js  app.ts  game.js  index.html  styles.css
src/systems/: Cargo.toml  README.md
src/tests/: README.md  config_loading.rs  database_init.rs  protocol_handshake.rs
src/world/: Cargo.toml  README.md
(+508 files in other folders)
