[package]
name = "kkmypk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-web-actors = "4.2"
actix = "0.13"
actix-rt = "2.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"], optional = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
env_logger = "0.11"
dotenv = "0.15"
log = "0.4"
rust-embed = "8.0"
mime_guess = "2.0"

[features]
default = []
db = ["dep:sqlx"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Maximize optimization
panic = "abort"     # Remove unwind symbols
strip = true        # Strip symbols
