[package]
name = "kkmypk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.2"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
rust-embed = "8.0"
mime_guess = "2.0"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
time = "=0.3.36"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
