[package]
name = "jxwxmk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
rust-embed = "8.0"
mime_guess = "2.0"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "server"
path = "src/server/main.rs"
