[package]
name = "starvers"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
anyhow = "1"
