[package]
name = "kkmypk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.4"
actix-web-actors = "4.2"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rust-embed = "8.0"
mime_guess = "2.0"

[[bin]]
name = "kkmypk"
path = "main.rs"
