[package]
name = "jxwxmk"
version = "0.1.0"
edition = "2021"

[lib]
name = "jxwxmk"
path = "lib.rs"

[[bin]]
name = "jxwxmk"
path = "main.rs"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.8"
rust-embed = "8"
mime_guess = "2"
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
awc = "3"
actix-rt = "2"
actix-http = "3"
serde_json = "1"
tempfile = "3"
futures-util = "0.3"

[[test]]
name = "protocol_handshake"
path = "tests/protocol_handshake.rs"

[[test]]
name = "config_loading"
path = "tests/config_loading.rs"

[[test]]
name = "database_init"
path = "tests/database_init.rs"
