[package]
name = "kkmypk-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
