[package]
name = "starveio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1