[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
systems = { path = "../systems" }
world = { path = "../world" }
protocol = { path = "../protocol" }
persistence = { path = "../persistence" }
config = { path = "../config" }
uuid = "1.0"
