[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.3.1+deprecated"
actix = "0.13"
serde = "1.0"
serde_json = "1.0"
protocol = { path = "../protocol" }
game = { path = "../game" }
config = { path = "../config" }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["full"] }
async-stream = "0.3"
futures-util = "0.3"