[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
tokio = { version = "1.0", features = ["full"] }
world = { path = "../world" }
protocol = { path = "../protocol" }
config = { path = "../config" }
uuid = "1.0"
