[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.3.1+deprecated"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
game = { path = "../game" }
net = { path = "../net" }
config = { path = "../config" }
persistence = { path = "../persistence" }
rust-embed = "8.0"
uuid = "1.0"
mime_guess = "2.0"
serde_json = "1.0"
