[workspace]
members = ["protocol", "config", "world", "systems", "game", "persistence", "net", "assets", "jxwxmk-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["JXWXMK Contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
actix = "0.13"
actix-web = "4.4"
actix-web-actors = "4.3"
awc = "3.4"
rust-embed = "8.2"
mime_guess = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
