[workspace]
members = [
    "crates/protocol",
    "crates/config",
    "crates/world",
    "crates/systems",
    "crates/persistence",
    "crates/game",
    "crates/net",
    "crates/assets",
    "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Async & Web
actix-web = "4.5"
actix = "0.13"
actix-ws = "0.3"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs & Randomness
uuid = { version = "1.7", features = ["v4", "serde"] }
rand = { version = "0.8", features = ["std_rng"] }

# Static Assets
rust-embed = "8.2"
mime_guess = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "json", "migrate"] }

# Metrics
prometheus = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Internal crates
protocol = { path = "crates/protocol" }
config = { path = "crates/config" }
world = { path = "crates/world" }
systems = { path = "crates/systems" }
persistence = { path = "crates/persistence" }
game = { path = "crates/game" }
net = { path = "crates/net" }
assets = { path = "crates/assets" }
