[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
world = { path = "../world" }
systems = { path = "../systems" }
config = { path = "../config" }
protocol = { path = "../protocol" }
persistence = { path = "../persistence" }
actix = "0.13"
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "2"
