[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
game = { path = "../game" }
net = { path = "../net" }
persistence = { path = "../persistence" }
config = { path = "../config" }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time"] }
actix = "0.13"
actix-rt = "2"
uuid = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
