[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protocol = { path = "../protocol" }
game = { path = "../game" }
assets = { path = "../assets" }
world = { path = "../world" }
persistence = { path = "../persistence" }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
