[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
world = { path = "../world" }
protocol = { path = "../protocol" }
config = { path = "../config" }
