[package]
name = "systems"
version = "0.1.0"
edition = "2021"

[dependencies]
world = { path = "../world" }
config = { path = "../config" }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protocol = { path = "../protocol" }
actix = "0.13"
rand = "0.8"
