[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
protocol = { path = "../protocol" }

[dev-dependencies]
serde_json = { workspace = true }
