[package]
name = "game"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
actix = { workspace = true }
config = { path = "../config" }
world = { path = "../world" }
systems = { path = "../systems" }
protocol = { path = "../protocol" }
persistence = { path = "../persistence" }

[dev-dependencies]
tokio = { workspace = true }
