[package]
name = "jxwxmk-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "jxwxmk-server"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
redis = { version = "0.24", features = ["tokio-comp"] }
config = { path = "../config" }
game = { path = "../game" }
assets = { path = "../assets" }
net = { path = "../net" }
