[package]
name = "net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
actix = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
protocol = { path = "../protocol" }
game = { path = "../game" }
persistence = { path = "../persistence" }

[dev-dependencies]
actix-rt = "2.9"
