[package]
name = "persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
config = { path = "../config" }
world = { path = "../world" }
protocol = { path = "../protocol" }

[dev-dependencies]
tokio = { workspace = true }
