[package]
name = "systems"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
config = { path = "../config" }
world = { path = "../world" }
protocol = { path = "../protocol" }

[dev-dependencies]
serde_json = { workspace = true }
