[package]
name = "game"
version.workspace = true
edition.workspace = true

[dependencies]
world = { workspace = true }
systems = { workspace = true }
config = { workspace = true }
protocol = { workspace = true }
persistence = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
