[package]
name = "net"
version.workspace = true
edition.workspace = true

[dependencies]
game = { workspace = true }
protocol = { workspace = true }
persistence = { workspace = true }
assets = { workspace = true }
actix-web = { workspace = true }
actix-ws = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
futures = { workspace = true }
