[package]
name = "persistence"
version.workspace = true
edition.workspace = true

[dependencies]
world = { workspace = true }
protocol = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
